Actualización del index.html

--- a/contacto.html
+++ b/contacto.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Información de contacto: urielmadera@gmailcom.</h1>
     <p>Para contactar con nosotros, por favor envíe un correo a la dirección <a href="mailto:
+    <script src="apps.js"></script>
 </body>
 </html>
