Se agregó la dirección de email al archivo de contacto.

--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Información de contacto: urielmadera@gmailcom.</h1>
-    <p>Para contactar con nosotros, por favor envíe un correo a la dirección <a href="mailto:
+    <p>Para contactar con nosotros, por favor envíe un correo a la dirección <a href="mailto:urielmadera@gmailcom">urielmadera@gmailcom</a>.</p> 
     
 </body>
 </html>
