Se agregó el nombre del contacto y su cargo

--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,8 @@
     <title>Información de contacto.</title>
 </head>
 <body>
-    <h1>Información de contacto: urielmadera@gmailcom.</h1>
+    <h1>Jerónimo Uriel Madera Espinoza.</h1>
+    <h2>Programador Junior </h2>
     <p>Para contactar con nosotros, por favor envíe un correo a la dirección <a href="mailto:urielmadera@gmailcom">urielmadera@gmailcom</a>.</p> 
     
 </body>
